# torii

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  awsgate-para-torii.md
.github/workflows/: release.yml
docs/: AGENTS.md  README.md  book.toml
docs/src/: README.md  SUMMARY.md
docs/src/concepts/: authentication.md  execution-flow.md  jasper.md  mental-model.md  providers.md  security-model.md
docs/src/development/: architecture.md  live-test.md  roadmap.md  testing.md
docs/src/getting-started/: installation.md  mcp-client.md  quickstart.md
docs/src/guides/: agents.md  aws-profiles.md  aws.md  control-plane.md  kubernetes.md  policies.md
docs/src/operations/: migration.md  troubleshooting.md
docs/src/reference/: audit.md  cli.md  configuration-layout.md  mcp-api.md  provider-packages.md  provider-schema.md
docs/theme/: torii.css
examples/: mcp_probe.rs  settings.yaml
examples/providers/aws/: manifest.yaml  provider.yaml
examples/providers/aws-profile/: env.example  manifest.yaml  provider.yaml
examples/providers/az/: env.example  manifest.yaml  (+1 more)
src/: app.rs  audit.rs  error.rs  lib.rs  main.rs  target_access.rs  targets.rs
src/agents/: codex.rs  mod.rs  portable.rs
src/config/: env_file.rs  mod.rs  paths.rs  settings.rs
src/control/: gui.rs  mod.rs
src/core/: invoke.rs  mod.rs
src/jasper/: grants.rs  mod.rs  rules.rs
src/mcp/: server.rs
src/providers/: config.rs  mod.rs  packages.rs  registry.rs
src/runtime/: exec.rs
tests/: agent_integration.rs  example_policies.rs  mcp_readonly_integration.rs  security_flow.rs
(+19 files in other folders)
